# novel-rag-chatbot

./: .env.example  .gitignore  README.md  add_docs.py  app.py  main.py  pyproject.toml
data/: novel_scraper.py
data/example-novel/: metadata.json
data/example-novel/chapters/: 3.txt
src/: utils.py
src/components/: document_loaders.py  embedders.py  llms.py  prompts.py  retrievers.py  vectorstores.py
src/configs/: __init__.py  configuration.py
src/graph/: graph.py  state.py
ui/: utils.py
ui/components/: __init__.py  chat.py  header.py  sidebar.py
